==> ROBOTIS-GIT/OpenCR/arduino/opencr_arduino/opencr/libraries/Wire/Wire.cpp <==
#include <Wire.h>

void TwoWire::begin(void) {
  rxBufferIndex = 0;
  rxBufferLength = 0;
  error = 0;
  transmitting = false;

  si2c->i2c_init();
}

void TwoWire::begin(uint8_t sda_pin, uint8_t scl_pin) {
  rxBufferIndex = 0;
  rxBufferLength = 0;
  error = 0;
  transmitting = false;

  si2c->i2c_init(sda_pin, scl_pin);
}

void  TwoWire::beginTransmission(uint8_t address) {
  if (transmitting) {
    error = (si2c->i2c_rep_start((address<<1)|I2C_WRITE) ? 0 : 2);
  } else {
    error = (si2c->i2c_start((address<<1)|I2C_WRITE) ? 0 : 2);
  }
  // indicate that we are transmitting
  transmitting = 1;
}

void  TwoWire::beginTransmission(int address) {
  beginTransmission((uint8_t)address);
}

uint8_t  TwoWire::endTransmission(uint8_t sendStop)
{
  uint8_t transError = error;
  if (sendStop) {
    si2c->i2c_stop();
    transmitting = 0;
  }
  error = 0;
  return transError;
}

uint8_t  TwoWire::endTransmission(void)
{
  return endTransmission(true);
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity,
        uint32_t iaddress, uint8_t isize, uint8_t sendStop) {
  uint8_t localerror = 0;
  if (isize > 0) {
    // send internal address; this mode allows sending a repeated start to access
    // some devices' internal registers. This function is executed by the hardware
    // TWI module on other processors (for example Due's TWI_IADR and TWI_MMR registers)
    beginTransmission(address);
    // the maximum size of internal address is 3 bytes
    if (isize > 3){
      isize = 3;
    }
    // write internal register address - most significant byte first
    while (isize-- > 0)
      write((uint8_t)(iaddress >> (isize*8)));
    endTransmission(false);
  }
  // clamp to buffer length
  if(quantity > BUFFER_LENGTH){
    quantity = BUFFER_LENGTH;
  }
  localerror = !si2c->i2c_rep_start((address<<1) | I2C_READ);
  if (error == 0 && localerror) error = 2;
  // perform blocking read into buffer
  for (uint8_t cnt=0; cnt < quantity; cnt++)
    rxBuffer[cnt] = si2c->i2c_read(cnt == quantity-1);
  // set rx buffer iterator vars
  rxBufferIndex = 0;
  rxBufferLength = quantity;
  if (sendStop) {
    transmitting = 0;
    si2c->i2c_stop();
  }
  return quantity;
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity, uint8_t sendStop) {
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint32_t)0, (uint8_t)0, (uint8_t)sendStop);
}

uint8_t TwoWire::requestFrom(int address, int quantity, int sendStop) {
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)sendStop);
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity) {
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)true);
}

uint8_t TwoWire::requestFrom(int address, int quantity) {
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)true);
}

int TwoWire::available(void) {
  return rxBufferLength - rxBufferIndex;
}

int TwoWire::read(void) {
  int value = -1;
  if(rxBufferIndex < rxBufferLength){
    value = rxBuffer[rxBufferIndex];
    ++rxBufferIndex;
  }
  return value;
}

void TwoWire::begin(void) {
  hi2c_->Init.OwnAddress1 = 0x00;

  rxBufferIndex = 0;
  rxBufferLength = 0;
  txBufferIndex = 0;
  txBufferLength = 0;
  error = 0;
  slave_mode = 0;
  transmitting = false;
  state_ = 1;
#ifdef WIRE_USE_DEBUG_IO_PINS
  pinMode(WIRE_DEBUG_RECEIVE_FROM, OUTPUT);
  digitalWriteFast(WIRE_DEBUG_RECEIVE_FROM, LOW);
  pinMode(WIRE_DEBUG_END_TRANSFER, OUTPUT);
  digitalWriteFast(WIRE_DEBUG_END_TRANSFER, LOW);
#endif
  setClock(frequency_);   // set the clock.
}

void TwoWire::begin(uint8_t address) {
  // TODO: Implement slave mode. 
  hi2c_->Init.OwnAddress1 = address << 1;  // 7 bit passed in
  rxBufferIndex = 0;
  rxBufferLength = 0;
  txBufferIndex = 0;
  txBufferLength = 0;
  error = 0;
  slave_mode = 1;  // Need to see how to update slave address and direction with init?
  transmitting = false;
  state_ = 1;
  setClock(frequency_);   // set the clock.

  // Setup to get interrupt when we get a slave address match
  __HAL_I2C_ENABLE_IT(hi2c_, I2C_IT_ADDRI);
}

void  TwoWire::beginTransmission(uint8_t address) {
  device_address = address << 1; // save away the address, preshift it
  transmitting = 1;
  txBufferLength = 0;
}

void  TwoWire::beginTransmission(int address) {
  beginTransmission((uint8_t)address);
}

uint8_t  TwoWire::endTransmission(uint8_t sendStop)
{
  // Not sure how to control if send stop or not?
  if (transmitting) {
    //status = HAL_I2C_Master_Transmit(hi2c_, device_address<<1, txBuffer, txBufferLength, WIRE_TX_TIMEOUT);
    uint8_t *pData = txBuffer;
    uint16_t Size = txBufferLength;
  
    if(hi2c_->State != HAL_I2C_STATE_READY) return HAL_BUSY;

    // If our last call did a sendStop we should not do something if bus is busy
    if(sendStop_ && (__HAL_I2C_GET_FLAG(hi2c_, I2C_FLAG_BUSY) == SET)) return HAL_BUSY;

    /* Process Locked */
    __HAL_LOCK(hi2c_);
    
    hi2c_->State = HAL_I2C_STATE_MASTER_BUSY_TX;
    hi2c_->ErrorCode   = HAL_I2C_ERROR_NONE;
    
    // Now lets build the CR2 register. 
    // Mode will depend on if sendStop is set
    transferConfig(device_address,txBufferLength, sendStop? I2C_AUTOEND_MODE : I2C_SOFTEND_MODE, 
        I2C_GENERATE_START_WRITE);

    sendStop_ = sendStop; // remember for the next call...

    while(Size > 0) {
      /* Wait until TXIS flag is set */
      if(waitOnTXISFlagUntilTimeout(WIRE_TX_TIMEOUT) != HAL_OK) {
        if(hi2c_->ErrorCode == HAL_I2C_ERROR_AF) {
          return HAL_ERROR; 
        } else {
          return HAL_TIMEOUT;
        }
      }

      /* Write data to TXDR */
      hi2c_->Instance->TXDR = (*pData++);
      Size--;
    }
    
    // Check to see which flag we should get at the end...
    if (sendStop) {
      if(waitOnFlagUntilTimeout( I2C_FLAG_STOPF, I2C_TIMEOUT_STOPF) != HAL_OK) {
        if(hi2c_->ErrorCode == HAL_I2C_ERROR_AF) {
          return HAL_ERROR; 
        } else {
          return HAL_TIMEOUT;
        }
      }
      __HAL_I2C_CLEAR_FLAG(hi2c_, I2C_FLAG_STOPF);
  
      /* Clear Configuration Register 2 */
      I2C_RESET_CR2(hi2c_);
    } else {
      // not generating stop so wait until Transfer complete
      debugDigitalWrite(WIRE_DEBUG_END_TRANSFER, HIGH);
      if(waitOnFlagUntilTimeout(I2C_FLAG_TC, WIRE_TX_TIMEOUT) != HAL_OK) {
        debugDigitalWrite(WIRE_DEBUG_END_TRANSFER, LOW);
        debugDigitalWrite(WIRE_DEBUG_END_TRANSFER, HIGH);
        debugDigitalWrite(WIRE_DEBUG_END_TRANSFER, LOW);
        if(hi2c_->ErrorCode == HAL_I2C_ERROR_AF) {
          return HAL_ERROR; 
        } else {
          return HAL_TIMEOUT;
        }
      }
      debugDigitalWrite(WIRE_DEBUG_END_TRANSFER, LOW);
      // Not sure if we need to reset CR2?  or wait for stop condtion? 
      // Assuming not and next transfer will do it.
    }
  
    hi2c_->State = HAL_I2C_STATE_READY;    
  
    /* Process Unlocked */
    __HAL_UNLOCK(hi2c_);

    transmitting = false; 
  }
  return 0; 
}

uint8_t  TwoWire::endTransmission(void)
{
  return endTransmission(true);
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity,
        uint32_t iaddress, uint8_t isize, uint8_t sendStop) {
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity, uint8_t sendStop) {
  // Hardware I2C... 
  rxBufferIndex = 0;
  rxBufferLength = 0;
  uint8_t *data_in_ptr = rxBuffer;
  if (quantity > sizeof(rxBuffer)) {
    quantity = sizeof(rxBuffer);
  }
  uint8_t count_left_to_read = quantity;

  if(hi2c_->State == HAL_I2C_STATE_READY)
  {    
    // If last call did a sendStop then we should not continue if the BUS is busy
    if(sendStop_ && (__HAL_I2C_GET_FLAG(hi2c_, I2C_FLAG_BUSY) == SET))
    {
      //Serial.println("TwoWire::requestFrom Busy");
      return 0; //HAL_BUSY;
    }
    /* Process Locked */
    __HAL_LOCK(hi2c_);
    
    hi2c_->State = HAL_I2C_STATE_MASTER_BUSY_RX;
    hi2c_->ErrorCode   = HAL_I2C_ERROR_NONE;
    
    transferConfig(address<<1,  quantity, sendStop? I2C_AUTOEND_MODE : I2C_SOFTEND_MODE, 
        I2C_GENERATE_START_READ);
    sendStop_ = sendStop; // remember for the next call...
    
    do
    {
      /* Wait until RXNE flag is set */
      HAL_StatusTypeDef hstatus;
      if((hstatus = waitOnRXNEFlagUntilTimeout(I2C_TIMEOUT_RXNE)) != HAL_OK) {
          //Serial.printf("TwoWire::requestFrom RXNE %d %d\n", hstatus, count_left_to_read);
          rxBufferLength = quantity - count_left_to_read;  // BUGBUG: seeing what was actually read

          return 0; // an error
      }       
      
      /* Write data to RXDR */

      debugDigitalWrite(WIRE_DEBUG_RECEIVE_FROM, HIGH);
      (*data_in_ptr++) =hi2c_->Instance->RXDR;
      count_left_to_read--;
      debugDigitalWrite(WIRE_DEBUG_RECEIVE_FROM, LOW);

    } while(count_left_to_read > 0);
    

    if (sendStop) {
      /* No need to Check TC flag, with AUTOEND mode the stop is automatically generated */
      /* Wait until STOPF flag is set */
      if(waitOnFlagUntilTimeout( I2C_FLAG_STOPF, I2C_TIMEOUT_STOPF) != HAL_OK) {
        //Serial.println("TwoWire::requestFrom STOPF");
        return 0; // no bytes
      }
      
      /* Clear STOP Flag */
      __HAL_I2C_CLEAR_FLAG(hi2c_, I2C_FLAG_STOPF);
      
      /* Clear Configuration Register 2 */
      I2C_RESET_CR2(hi2c_);
    } else {
      // not generating stop so wait until Transfer compelte
      if(waitOnFlagUntilTimeout(I2C_FLAG_TC, WIRE_TX_TIMEOUT) != HAL_OK) {
        if(hi2c_->ErrorCode == HAL_I2C_ERROR_AF) {
          return HAL_ERROR; 
        } else {
          return HAL_TIMEOUT;
        }
      }
      // Not sure if we need to reset CR2?  or wait for stop condtion? 
      // Assuming not and next transfer will do it.
    }    
    hi2c_->State = HAL_I2C_STATE_READY;    
    
    /* Process Unlocked */
    __HAL_UNLOCK(hi2c_);
    rxBufferLength = quantity;
    
    return quantity;
  }
  //Serial.println("TwoWire::requestFrom not Ready");
  return 0;  // An error so say we did not receive anything.  
}

uint8_t TwoWire::requestFrom(int address, int quantity, int sendStop) {
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)sendStop);
}

uint8_t TwoWire::requestFrom(uint8_t address, uint8_t quantity) {
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)true);
}

uint8_t TwoWire::requestFrom(int address, int quantity) {
  return requestFrom((uint8_t)address, (uint8_t)quantity, (uint8_t)true);
}

int TwoWire::available(void) {
  return rxBufferLength - rxBufferIndex;
}

int TwoWire::read(void) {
  int value = -1;
  if(rxBufferIndex < rxBufferLength){
    value = rxBuffer[rxBufferIndex];
    ++rxBufferIndex;
  }
  return value;
}
